# Hallo

./: 123.js  1天书TG暴力下载 加入通用和猫咪订阅.js
Hallo/GIWIFI/: README.md
Hallo/GIWIFI/giwifi/: Cargo.toml
Hallo/GIWIFI/giwifi/src/: aes.rs  lib.rs  main.rs
Hallo/GIWIFI/javascript/: index.js  package.json  pnpm-lock.yaml
Hallo/GIWIFI/openwrt/: jsconfig.json  package.json  pnpm-lock.yaml
Hallo/GIWIFI/python/: aes.py  main.py  r.txt
Hallo/luci-app-MAC/: Makefile
Hallo/luci-app-autoweblogin/: Makefile  aaa.sh  autoweblogin.sh
Hallo/luci-app-autoweblogin/controller/: NetTask.lua  autoweblogin.lua
Hallo/luci-app-autoweblogin/model/: trontabs.lua  weblogin.lua
Hallo/luci-app-defense/: Makefile
Hallo/luci-app-defense/controller/: defense.lua
Hallo/luci-app-diy/: Makefile
Hallo/luci-app-diy/controller/: diy.lua
Hallo/luci-app-mac/: Makefile
Hallo/luci-app-mac/controller/: MAC.lua  MAC_clone.lua
Hallo/luci-app-mac2.0/: Makefile
Hallo/luci-app-mac2.0/model/: brukamen_mac.lua
Hallo/luci-app-school/: Makefile
Hallo/luci-app-shanligong/: Makefile
Hallo/luci-app-suselogin/: login.sh
Hallo/luci-app-ua/controller/: autoua.lua
Hallo/luci-app-ua2f/: Makefile
Hallo/luci-app-ua2f/controller/: autoua2f.lua  niubi.lua
Hallo/luci-mod-admin-full/: Makefile
Hallo/smart-srun-main/: Makefile  README.md
Hallo/smart-srun-main/doc/: CONTRIBUTING.md  jxnu.md
Hallo/smart-srun-main/scripts/: hot_update.py  release_assets.py
config/: 4A.config  CR660x.config  K2.config  R4Av2.config
luci-app-RZ/: Makefile
luci-app-RZ/controller/: authctrl.lua
(+118 files in other folders)
