[package]
name = "giwifi"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
tokio = { version = "1.52.2", features = ["full"] }
clap = { version = "4.6.1", features = ["derive", "env"] }

aes = "0.9.0"
base64 = "0.22.1"
cbc = { version = "0.2.0", features = ["alloc"] }
ecb = "0.2.0"

url = "2.5.8"
scraper = { version = "0.26.0" }
reqwest = { version = "0.13.3", features = [
    "json",
    'form',
], default-features = false }


serde = { version = "1.0.228", features = ["derive"] }
serde_urlencoded = "0.7.1"
urlencoding = "2.1.3"
# chrono = "0.4.44"
md5 = "0.8.0"
hex = "0.4.3"
serde_json = "1.0.149"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
